src/objects/ACET_VCCD_Topic_Mappings__mdt.object
<CustomObject>
    <fields>
        <fullName>MappingValue__c</fullName>
        <description>It will Salesforce Mapping Value</description>
        <label>Mapping Value</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Mapping_Topic__c</fullName>
        <label>Mapping Topic</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionType__c</fullName>
        <label>Question Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>ACET VCCD Topic Mappings</label>
    <pluralLabel>ACET_VCCD Topic Mappings</pluralLabel>
</CustomObject>